--- a/src/css/style.css
+++ b/src/css/style.css
@@ -56,6 +56,7 @@ pre {
   color: #fff;
   height: 70px;
 }
+
 /* .navbar inActive {
   background-color: var(--primary-color);
   color: #fff;
@@ -83,6 +84,9 @@ pre {
 }
 .navbar a:hover {
   border-bottom: 2px #fff solid;
+}
+.navbar logo:hover {
+  border-bottom: 0;
 }
 .navbar .flex {
   justify-content: space-between;
@@ -361,5 +365,11 @@ pre {
   .navbar ul {
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.1);
+  }
+  .showcase p {
+    margin: 0;
+  }
+  .card {
+    max-width: 80%;
   }
 }
