--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,11 +85,15 @@ pre {
 .navbar a:hover {
   border-bottom: 2px #fff solid;
 }
-.navbar logo:hover {
+.navbar logo {
   border-bottom: 0;
 }
 .navbar .flex {
   justify-content: space-between;
+}
+.logo {
+  height: 5rem;
+  margin-left: 0;
 }
 
 /*  showcase */
